<resources>
    <string name="app_name">Konselink</string>
    <string name="pedoman">Pedoman</string>
    <string name="pesan_nav">Pesan</string>
    <string name="psikolog_nav">Psikolog</string>
    <string name="profil_nav">Profil</string>
    <string name="panduan_thumbnail_description">Panduan Thumbnail</string>
    <string name="panduan_banner_description">Panduan Banner</string>
    <string name="panduan_title_hint">Panduan Title</string>
    <string name="panduan_content_hint">Panduan Content</string>
    <string name="ellipsis">%1$s&#8230;</string>
    <string name="panduan_author_hint">Panduan Author</string>
    <string name="author_prefix">By: %1$s</string>
    <string name="detail_panduan_appbar_title">Panduan</string>
    <string name="panduan_category_title">Kategori:</string>
    <string name="panduan_categories">Meditasi, Kecemasan, Stress, Kehidupan, Kesehatan</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="app_name_caps">KONSELINK</string>
    <string name="login_button_text">Masuk</string>
    <string name="no_account_question">Tidak memilik akun?</string>
    <string name="register_as_user_prompt">Daftar sebagai Pengguna</string>
    <string name="atau">atau</string>
    <string name="register_as_counselor_prompt">Daftar sebagai Konselor</string>
    <string name="username_hint">Username</string>
    <string name="password_confirm_hint">Konfirmasi Password</string>
    <string name="submit">Submit</string>
    <string name="community_hint">Komunitas</string>
    <string name="phone_hint">No. Handphone</string>
    <string name="settings">Pengaturan</string>
    <string name="faq">FAQ</string>
    <string name="about">Tentang</string>
    <string name="logout">Logout</string>

    <!--  USER SHARED PREF VARIABLES  -->
    <string name="user_shared_pref_file_key">user_shared_pref</string>
    <string name="user_id_key">userId</string>
    <string name="token_key">token</string>
    <string name="role_key">role</string>
</resources>
