<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/credential_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                app:layout_constraintVertical_chainStyle="packed"
                android:text="@string/app_name_caps"
                android:textStyle="bold"
                android:textSize="40sp"
                android:textColor="@color/colorPrimary"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="167dp"
                android:id="@+id/konselink_title" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@id/email_input_layout"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/password_input_layout"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.8"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:layout_constraintVertical_chainStyle="packed"
                android:hint="@string/email_hint"
                app:layout_constraintCircleRadius="15dp"
                android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.8"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_input_layout" app:layout_constraintBottom_toTopOf="@id/login_submit_button"
                app:endIconMode="password_toggle"
                android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/login_submit_button"
                android:layout_width="0dp"
                app:layout_constraintWidth_percent="0.8"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/login_button_text"
                android:onClick="loginButtonAction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="20dp"/>

        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/register_command_layout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/login_submit_button"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                >
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_account_question"
                    android:textAlignment="center"
                    />
            <TextView
                    android:id="@+id/register_user_clickable"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:onClick="registerAsUserClickAction"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/register_as_user_prompt"
                    android:textAlignment="center"
                    />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atau"
                    android:textAlignment="center"
                    />
            <TextView
                    android:id="@+id/register_counselor_clickable"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginTop="8dp"
                    android:onClick="registerAsCounselorClickAction"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/register_as_counselor_prompt"
                    android:textAlignment="center"
                    />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
            android:id="@+id/login_loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>