<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_height="140dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/panduan_thumbnail"
                android:layout_width="0dp"
                android:contentDescription="@string/panduan_thumbnail_description"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                app:layout_constraintWidth_percent="0.35"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/content_layout" app:layout_constraintStart_toStartOf="parent"
        />

        <LinearLayout
                android:id="@+id/content_layout"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="match_parent"
                app:layout_constraintWidth_percent="0.65"
                app:layout_constraintLeft_toRightOf="@id/panduan_thumbnail"
                app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:id="@+id/panduan_title"
                    android:hint="@string/panduan_title_hint"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    app:layout_constraintWidth_percent="0.6"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toTopOf="@id/panduan_content"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:id="@+id/panduan_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:hint="@string/panduan_content_hint"
                    android:layout_height="wrap_content"
                    app:layout_constraintWidth_percent="0.6"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="15dp"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>