<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/register_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView android:layout_width="128dp" android:layout_height="128dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@id/username_input_layout"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/account_circle"
                android:id="@+id/account_circle"
                />

        <com.google.android.material.textfield.TextInputLayout
                app:layout_constraintVertical_chainStyle="packed"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@id/email_input_layout"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/username_hint"
                android:id="@+id/username_input_layout"
                >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/username_input_layout" app:layout_constraintBottom_toTopOf="@id/password_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/email_hint"
                >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:layout_constraintTop_toBottomOf="@id/email_input_layout" app:layout_constraintBottom_toTopOf="@id/password_confirm_input_layout"
                app:endIconMode="password_toggle"
                >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_confirm_input_layout"
                android:layout_width="0dp" android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.8"
                android:hint="@string/password_confirm_hint"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_input_layout" app:layout_constraintBottom_toBottomOf="parent"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_confirm_input"
                    android:layout_width="match_parent" android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="registerUserButtonAction"
                android:text="@string/submit"
                style="@style/Widget.MaterialComponents.Button"
                app:layout_constraintWidth_percent="0.8"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_confirm_input_layout" app:layout_constraintBottom_toBottomOf="parent"
                />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
            android:id="@+id/register_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>